// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CHECKIN RENDERING: <CheckInContainer /> can be rendered 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F8F9FA",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <Modal
    hardwareAccelerated={false}
    visible={true}
  >
    <View
      style={
        Object {
          "backgroundColor": "#1F2532",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <ActivityIndicator
          color="#EB576A"
          size="large"
          style={
            Object {
              "flex": 1,
            }
          }
        />
      </View>
    </View>
  </Modal>
  <View
    style={
      Object {
        "alignContent": "stretch",
        "alignItems": "stretch",
        "backgroundColor": "#F8F9FA",
        "flexDirection": "column",
        "height": 354.06976744186045,
        "justifyContent": "flex-start",
        "overflow": "hidden",
        "paddingTop": 30,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "paddingTop": 10,
          "width": "100%",
          "zIndex": 2,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "flex-end",
            "marginLeft": 15,
            "marginRight": 15,
            "textAlign": "center",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "borderRadius": 3,
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 3,
              },
              undefined,
              false,
            ]
          }
        >
          <View
            accessibilityHint="Re-fetches the questionnaire and status. The current page will be updated."
            accessibilityLabel="refresh"
            accessibilityRole="button"
            accessibilityState={
              Object {
                "busy": false,
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "opacity": 1,
                "width": 104.65116279069767,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderColor": "#2089dc",
                  "borderRadius": 3,
                  "borderWidth": 0,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "padding": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "overflow": "hidden",
                  }
                }
              >
                <View>
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "transparent",
                        "justifyContent": "center",
                      }
                    }
                  >
                    <Text
                      allowFontScaling={false}
                      style={
                        Array [
                          Object {
                            "color": "#EB576A",
                            "fontSize": 48.83720930232558,
                          },
                          Object {
                            "backgroundColor": "transparent",
                          },
                          Object {
                            "fontFamily": "Material Design Icons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {},
                        ]
                      }
                      testID="iconIcon"
                    >
                      󰑐
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <Text
          accessibilityRole="header"
          numberOfLines={1}
          style={
            Object {
              "alignContent": "center",
              "alignSelf": "center",
              "color": "#1F2532",
              "flex": 1,
              "fontFamily": "IBMPlexSans-SemiBold",
              "fontSize": 33.75,
              "lineHeight": 43.125,
              "textAlign": "center",
              "width": "100%",
            }
          }
        >
          Check-In
        </Text>
        <View
          style={
            Array [
              Object {
                "borderRadius": 3,
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 3,
              },
              undefined,
              false,
            ]
          }
        >
          <View
            accessibilityHint="Opens new page with additional informations and links."
            accessibilityLabel="Additional Information"
            accessibilityRole="button"
            accessibilityState={
              Object {
                "busy": false,
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "opacity": 1,
                "width": 104.65116279069767,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderColor": "#2089dc",
                  "borderRadius": 3,
                  "borderWidth": 0,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "padding": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "overflow": "hidden",
                  }
                }
              >
                <View>
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "transparent",
                        "justifyContent": "center",
                      }
                    }
                  >
                    <Text
                      allowFontScaling={false}
                      style={
                        Array [
                          Object {
                            "color": "#EB576A",
                            "fontSize": 48.83720930232558,
                          },
                          Object {
                            "backgroundColor": "transparent",
                          },
                          Object {
                            "fontFamily": "Material Design Icons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {},
                        ]
                      }
                      testID="iconIcon"
                    >
                      󰍜
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "flex-end",
          "left": 0,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <Image
        resizeMode="cover"
        source={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "height": 354.06976744186045,
            "width": 750,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "flex-end",
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "alignSelf": "center",
            "bottom": 13.081395348837209,
            "maxHeight": 308.781773931855,
            "maxWidth": 650,
            "position": "relative",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#F8F9FA",
        "flex": 1,
        "flexDirection": "column",
        "height": "100%",
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "width": "100%",
        }
      }
    >
      <RCTScrollView
        contentContainerStyle={
          Object {
            "flexGrow": 1,
          }
        }
        contentData={<View />}
        enableOnAndroid={true}
        onScroll={[Function]}
        scrollEventThrottle={16}
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
            "width": "100%",
          }
        }
      >
        <View>
          <View />
        </View>
      </RCTScrollView>
    </View>
  </View>
</View>
`;

exports[`CHECKIN RENDERING: <CheckInListView /> can be rendered 1`] = `
<View
  style={
    Object {
      "marginBottom": 52.325581395348834,
    }
  }
/>
`;

exports[`CHECKIN RENDERING: <CheckInScreen /> can be rendered 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F8F9FA",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <Modal
    hardwareAccelerated={false}
    visible={true}
  >
    <View
      style={
        Object {
          "backgroundColor": "#1F2532",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <ActivityIndicator
          color="#EB576A"
          size="large"
          style={
            Object {
              "flex": 1,
            }
          }
        />
      </View>
    </View>
  </Modal>
  <View
    style={
      Object {
        "alignContent": "stretch",
        "alignItems": "stretch",
        "backgroundColor": "#F8F9FA",
        "flexDirection": "column",
        "height": 354.06976744186045,
        "justifyContent": "flex-start",
        "overflow": "hidden",
        "paddingTop": 30,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "paddingTop": 10,
          "width": "100%",
          "zIndex": 2,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "flex-end",
            "marginLeft": 15,
            "marginRight": 15,
            "textAlign": "center",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "borderRadius": 3,
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 3,
              },
              undefined,
              false,
            ]
          }
        >
          <View
            accessibilityHint="Re-fetches the questionnaire and status. The current page will be updated."
            accessibilityLabel="refresh"
            accessibilityRole="button"
            accessibilityState={
              Object {
                "busy": false,
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "opacity": 1,
                "width": 104.65116279069767,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderColor": "#2089dc",
                  "borderRadius": 3,
                  "borderWidth": 0,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "padding": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "overflow": "hidden",
                  }
                }
              >
                <View>
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "transparent",
                        "justifyContent": "center",
                      }
                    }
                  >
                    <Text
                      allowFontScaling={false}
                      style={
                        Array [
                          Object {
                            "color": "#EB576A",
                            "fontSize": 48.83720930232558,
                          },
                          Object {
                            "backgroundColor": "transparent",
                          },
                          Object {
                            "fontFamily": "Material Design Icons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {},
                        ]
                      }
                      testID="iconIcon"
                    >
                      󰑐
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <Text
          accessibilityRole="header"
          numberOfLines={1}
          style={
            Object {
              "alignContent": "center",
              "alignSelf": "center",
              "color": "#1F2532",
              "flex": 1,
              "fontFamily": "IBMPlexSans-SemiBold",
              "fontSize": 33.75,
              "lineHeight": 43.125,
              "textAlign": "center",
              "width": "100%",
            }
          }
        >
          Check-In
        </Text>
        <View
          style={
            Array [
              Object {
                "borderRadius": 3,
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 3,
              },
              undefined,
              false,
            ]
          }
        >
          <View
            accessibilityHint="Opens new page with additional informations and links."
            accessibilityLabel="Additional Information"
            accessibilityRole="button"
            accessibilityState={
              Object {
                "busy": false,
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "opacity": 1,
                "width": 104.65116279069767,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderColor": "#2089dc",
                  "borderRadius": 3,
                  "borderWidth": 0,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "padding": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "overflow": "hidden",
                  }
                }
              >
                <View>
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "transparent",
                        "justifyContent": "center",
                      }
                    }
                  >
                    <Text
                      allowFontScaling={false}
                      style={
                        Array [
                          Object {
                            "color": "#EB576A",
                            "fontSize": 48.83720930232558,
                          },
                          Object {
                            "backgroundColor": "transparent",
                          },
                          Object {
                            "fontFamily": "Material Design Icons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {},
                        ]
                      }
                      testID="iconIcon"
                    >
                      󰍜
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "flex-end",
          "left": 0,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <Image
        resizeMode="cover"
        source={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "height": 354.06976744186045,
            "width": 750,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "flex-end",
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "alignSelf": "center",
            "bottom": 13.081395348837209,
            "maxHeight": 308.781773931855,
            "maxWidth": 650,
            "position": "relative",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#F8F9FA",
        "flex": 1,
        "flexDirection": "column",
        "height": "100%",
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "width": "100%",
        }
      }
    >
      <RCTScrollView
        contentContainerStyle={
          Object {
            "flexGrow": 1,
          }
        }
        contentData={<View />}
        enableOnAndroid={true}
        onScroll={[Function]}
        scrollEventThrottle={16}
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
            "width": "100%",
          }
        }
      >
        <View>
          <View />
        </View>
      </RCTScrollView>
    </View>
  </View>
</View>
`;

exports[`CHECKIN RENDERING: <CheckInTiles /> can be rendered 1`] = `
<View
  style={
    Object {
      "marginBottom": 15,
    }
  }
>
  <View
    style={
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "center",
      }
    }
  >
    <View
      accessibilityRole="button"
      accessible={true}
      collapsable={false}
      focusable={false}
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#DADADA",
          "borderRadius": 5,
          "color": "white",
          "display": "flex",
          "height": 191.86046511627907,
          "justifyContent": "center",
          "margin": 23.25581395348837,
          "opacity": 1,
          "padding": 10,
          "width": 305.2325581395349,
        }
      }
    >
      <View
        style={
          Object {
            "justifyContent": "space-around",
          }
        }
      >
        <View
          style={
            Object {
              "overflow": "hidden",
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "justifyContent": "center",
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "#F8F9FA",
                      "fontSize": 24,
                    },
                    Object {
                      "backgroundColor": "transparent",
                      "marginBottom": 5,
                    },
                    Object {
                      "fontFamily": "Material Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
                testID="iconIcon"
              >
                
              </Text>
            </View>
          </View>
        </View>
        <Text
          style={
            Object {
              "color": "white",
              "fontFamily": "IBMPlexSans-SemiBold",
              "fontSize": 26.25,
              "lineHeight": 35.625,
              "textAlign": "center",
            }
          }
        >
          Button: Send out Special Report
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`CHECKIN RENDERING: <CheckInWelcomeText /> can be rendered 1`] = `
<View
  style={
    Object {
      "marginBottom": 43.604651162790695,
      "marginLeft": 52.325581395348834,
      "marginRight": 52.325581395348834,
    }
  }
/>
`;

exports[`CHECKIN RENDERING: <SurveyScreen /> can be rendered 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F8F9FA",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignContent": "stretch",
        "alignItems": "stretch",
        "backgroundColor": "#F8F9FA",
        "flexDirection": "column",
        "height": 354.06976744186045,
        "justifyContent": "flex-start",
        "overflow": "hidden",
        "paddingTop": 30,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "paddingTop": 10,
          "width": "100%",
          "zIndex": 2,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "flex-end",
            "marginLeft": 15,
            "marginRight": 15,
            "textAlign": "center",
          }
        }
      >
        <Text
          accessibilityRole="header"
          numberOfLines={1}
          style={
            Object {
              "alignContent": "center",
              "alignSelf": "center",
              "color": "#1F2532",
              "flex": 1,
              "fontFamily": "IBMPlexSans-SemiBold",
              "fontSize": 33.75,
              "lineHeight": 43.125,
              "textAlign": "center",
              "width": "100%",
            }
          }
        >
          Questionnaire
        </Text>
        <View
          style={
            Array [
              Object {
                "borderRadius": 3,
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 3,
              },
              undefined,
              false,
            ]
          }
        >
          <View
            accessibilityHint="Opens new page with additional informations and links."
            accessibilityLabel="Additional Information"
            accessibilityRole="button"
            accessibilityState={
              Object {
                "busy": false,
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "opacity": 1,
                "width": 104.65116279069767,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderColor": "#2089dc",
                  "borderRadius": 3,
                  "borderWidth": 0,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "padding": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "overflow": "hidden",
                  }
                }
              >
                <View>
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "transparent",
                        "justifyContent": "center",
                      }
                    }
                  >
                    <Text
                      allowFontScaling={false}
                      style={
                        Array [
                          Object {
                            "color": "#EB576A",
                            "fontSize": 48.83720930232558,
                          },
                          Object {
                            "backgroundColor": "transparent",
                          },
                          Object {
                            "fontFamily": "Material Design Icons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {},
                        ]
                      }
                      testID="iconIcon"
                    >
                      󰍜
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <Text
          accessibilityRole="header"
          numberOfLines={1}
          style={
            Object {
              "alignSelf": "center",
              "color": "#1F2532",
              "fontFamily": "IBMPlexSans",
              "fontSize": 30,
              "lineHeight": 39.375,
              "marginBottom": 8.720930232558139,
              "marginTop": -26.162790697674417,
              "position": "relative",
              "textAlign": "center",
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "flex-end",
          "left": 0,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <Image
        resizeMode="cover"
        source={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "height": 354.06976744186045,
            "width": 750,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "flex-end",
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "alignSelf": "center",
            "bottom": 13.081395348837209,
            "maxHeight": 308.781773931855,
            "maxWidth": 650,
            "position": "relative",
          }
        }
      />
    </View>
  </View>
  <Modal
    animationType="none"
    deviceHeight={null}
    deviceWidth={null}
    hardwareAccelerated={false}
    hideModalContentWhileAnimating={false}
    onBackdropPress={[Function]}
    onModalHide={[Function]}
    onModalWillHide={[Function]}
    onModalWillShow={[Function]}
    onRequestClose={[Function]}
    panResponderThreshold={4}
    scrollHorizontal={false}
    scrollOffset={0}
    scrollOffsetMax={50}
    scrollTo={[Function]}
    statusBarTranslucent={false}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    swipeDirection={
      Array [
        "down",
      ]
    }
    swipeThreshold={100}
    transparent={true}
    visible={false}
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      forwardedRef={[Function]}
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "black",
          "bottom": 0,
          "height": 1334,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 750,
        }
      }
    />
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
      style={
        Array [
          Array [
            Object {
              "margin": 37.5,
              "transform": Array [
                Object {
                  "translateY": 0,
                },
              ],
            },
            Object {
              "flex": 1,
              "justifyContent": "center",
            },
            Object {
              "borderRadius": 10,
              "justifyContent": "flex-end",
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 20,
            },
            Object {
              "margin": 0,
            },
          ],
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        collapsable={false}
        deviceHeight={null}
        deviceWidth={null}
        forwardedRef={[Function]}
        hideModalContentWhileAnimating={false}
        nativeID="animatedComponent"
        onBackdropPress={[Function]}
        onModalHide={[Function]}
        onModalWillHide={[Function]}
        onModalWillShow={[Function]}
        onMoveShouldSetResponder={[Function]}
        onMoveShouldSetResponderCapture={[Function]}
        onResponderEnd={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderReject={[Function]}
        onResponderRelease={[Function]}
        onResponderStart={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        onStartShouldSetResponderCapture={[Function]}
        panResponderThreshold={4}
        pointerEvents="box-none"
        scrollHorizontal={false}
        scrollOffset={0}
        scrollOffsetMax={50}
        scrollTo={[Function]}
        statusBarTranslucent={false}
        style={
          Object {
            "borderRadius": 10,
            "flex": 1,
            "justifyContent": "flex-end",
            "left": 0,
            "margin": 37.5,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 20,
            "top": 0,
            "transform": Array [
              Object {
                "translateY": 0,
              },
            ],
          }
        }
        supportedOrientations={
          Array [
            "portrait",
            "landscape",
          ]
        }
        swipeDirection={
          Array [
            "down",
          ]
        }
        swipeThreshold={100}
      >
        <View />
      </View>
    </View>
  </Modal>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
        "width": "100%",
      }
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "flexGrow": 1,
        }
      }
      contentData={
        <View
          style={
            Object {
              "backgroundColor": "#F8F9FA",
              "flex": 1,
              "flexDirection": "column",
            }
          }
        >
          <CategoriesList
            showQuestionnaireModal={[Function]}
          />
          <View
            style={
              Object {
                "flex": 1,
                "height": "100%",
                "justifyContent": "flex-end",
                "marginBottom": 36,
                "marginTop": 20,
              }
            }
          />
        </View>
      }
      enableOnAndroid={true}
      onScroll={[Function]}
      scrollEventThrottle={16}
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "width": "100%",
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#F8F9FA",
              "flex": 1,
              "flexDirection": "column",
            }
          }
        >
          <View />
          <View
            style={
              Object {
                "flex": 1,
                "height": "100%",
                "justifyContent": "flex-end",
                "marginBottom": 36,
                "marginTop": 20,
              }
            }
          />
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;
